--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Test Abo ovodoogadoo
+<html>
+<head>
+    <title> Lloyd Alimboyao Sy </title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a12e148f1f.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class="header">
+        <nav>
+            <div class="name">
+                <a href="/">Lloyd Alimboyao Sy</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/">About</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="dissertation.html">Who Robbed the Woods</a></li>
+                <li><a href="dh.html">DH</a></li>
+                <li><a href="creative.html">Creative</a></li>
+                <!--<li><a href="research.html">Research</a></li>--><!-- 
+                <li><a href="publications.html">Publications</a></li> -->
+            </ul>
+        </nav>
+    </div>
+
+    <div class="content">
+        <img src="headshot2.png" class="pic">
+        <p>I am a PhD Candidate in English at the University of Virginia, where I hold the <a href="https://www.jeffersonscholars.org/fellowships">Jefferson Fellowship</a>. I study American literature, mostly from the long nineteenth century, focusing on Indigenous American literatures and environmental humanities. My work is forthcoming in <em>Early American Literature</em>, <em>J19: The Journal of Nineteenth-Century Americanists</em>, and <em>Studies in American Indian Literatures</em>.</p><br><br>
+
+        <p>My dissertation is entitled "Who Robbed the Woods: American Deforestation and Indigenous Literary Resistance, 1825-1930." It relates depictions of woodcutting in American letters to questions of Indigenous property, political agency, and environmental ethics as they develop throughout the nineteenth century and into the twentieth. I will defend the dissertation in May 2023.</p> <br> <br>
+
+        <p>I also work in digital humanities, currently serving as Project Manager of <a href="http://cbw.iath.virginia.edu">Collective Biographies of Women</a>. Prior to my graduate program, I earned a bachelor's degree in computer science from Brown University and worked as a software developer. An article of mine about digital "mid-range reading" is forthcoming in <em>Victorian Studies</em>.</p> <br>
+
+        <div class="section-title">
+            Contact
+        </div>
+        <table>
+            <tr>
+                <td><i class="fa-brands fa-linkedin"></i></td>
+                <td><a href="https://www.linkedin.com/in/lloyd-sy-63422066">LinkedIn</a></td>
+            </tr>
+            <tr>
+                <td><i class="fa-brands fa-square-github"></i></td>
+                <td><a href="https://github.com/las2hs">GitHub</a></td>
+            </tr>
+            <tr>
+                <td><i class="fa-solid fa-envelope-open-text"></i></td>
+                <td>las2hs [at] virginia [dot] edu</td>
+            </tr>
+        </table>
+
+        <br>The best way to contact me is by email.
+        <br><br>
+    </div>
+</body>
+</html>
