--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title> Lloyd Alimboyao Sy </title>
+    <title> Stephen Hoyle </title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/a12e148f1f.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
