--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="content">
-        <img src="headshot2.png" class="pic">
+        <img src="profile.jpeg" class="pic">
         <p>I am Stephen Hoyle.  I make content reach its peak quality.</p><br><br>
 
         <div class="section-title">
