--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
             <div class="name">
                 <a href="/">Stephen Hoyle</a>
             </div>
-<!--             <ul class="nav-links">
+            <ul class="nav-links">
                 <li><a href="/">About</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="dissertation.html">Who Robbed the Woods</a></li>
-                <li><a href="dh.html">DH</a></li>
-                <li><a href="creative.html">Creative</a></li>
-            </ul> -->
+                <li><a href="services.html">Services</a></li>
+            </ul>
         </nav>
     </div>
 
