--- a/services.html
+++ b/services.html
@@ -1,1 +1,35 @@
-Ok
+<html>
+<head>
+    <title> Stephen Hoyle: Services</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class="header">
+        <nav>
+            <div class="name">
+                <a href="/">Stephen Hoyle</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="/">About</a></li>
+              <li><a href="services.html">Services</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="content">
+        <div class="section-title">
+                Editing
+        </div>
+           I edit.
+        <br><br>
+    </div>
+    <div class="content">
+        <div class="section-title">
+                Proofreading
+        </div>
+           I proofread
+        <br><br>
+    </div>
+</body>
+</html>
